fixed issue that the wrong file has been opened when using the combo box of the location bar

BUG: 155356

svn path=/trunk/KDE/kdelibs/; revision=824848